--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -2,8 +2,8 @@
 @import "base/_variables";
 @import "base/_mixins";
 @import "base/_global";
-@import "modules/_btn";
 @import "modules/_large-hero";
+@import "modules/_btn";
 @import "modules/_wrapper";
 @import "modules/_page-section";
 @import "modules/_headline";
@@ -11,14 +11,4 @@
 @import "modules/_generic-content-container";
 @import "modules/_section-title";
 @import "modules/_feature-item";
-
-
-
-
-
-
-
-
-
-
-
+@import "modules/_testimonial";
